# rust-cli-template

./: Cargo.toml  README.md
benches/: main.rs
src/: lib.rs  main.rs
tests/: example.rs
